[package]
name = "btle-smartbands"
version = "0.1.0"
authors = ["Ferris Kwaijtaal <ferris@devdroplets.com>", "Jelle Maas <typiqally@gmail.com>"]
edition = "2018"

[dependencies]
btleplug = { git = "https://github.com/deviceplug/btleplug", branch = "master"}
rand = { version = "0.8.3" }
uuid = "0.8.2"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3.15"
tokio = {version = "1.6.0",  features = ["full"]}